Allow use of SegmentMetadataCache on the Coordinator